Add Moodify project images and update project details in JSON

--- a/src/pages/projects/[code].astro
+++ b/src/pages/projects/[code].astro
@@ -29,7 +29,7 @@ const { Content } = await render(projectDescription);
     <section class="project-main">
       <img
         class="project-image"
-        src={`/images/${project.coverImage}`}
+        src={`/images/${project.projectImage}`}
         onerror="this.src='/placeholder.svg'"
         alt={project.title}
       />
